# state_estimation

./: .gitignore  KalmanFilter.cpp  KalmanFilter.hpp  LinearGaussianSystem.hpp  LinearMeasurementModel.hpp  README.md
data/: filtered_data.csv  noisy_data.csv
scripts/: gaussiansThroughFunctions.py  generateNoisyData.py
src/: CMakeLists.txt  KalmanFilter.hpp  README.md  eigen_tutorial.cpp  filterNoisyVelocity.cpp  linearCarProblem.cpp
